fixed z-index for map

--- a/app/assets/stylesheets/offices.css.scss
+++ b/app/assets/stylesheets/offices.css.scss
@@ -129,7 +129,7 @@
   width: 270px;
   height: 270px;
   padding: 0px;
-  z-index: -1;
+
   display: block;
   position: relative;
 }
